Enum user_status {
  active
  blocked
}

Enum order_status {
  pending
  paid
  shipping
  completed
  cancelled
}

Enum payment_status {
  pending
  success
  failed
  refunded
}

Enum discount_type {
  percent
  fixed
}

Enum chat_role {
  user
  assistant
}

Table roles {
  id bigint [pk, increment]
  name varchar(50) [not null, unique]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table users {
  id bigint [pk, increment]
  role_id bigint [not null, ref: > roles.id]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  full_name varchar(150) [not null]
  phone varchar(20)
  status user_status [not null, default: 'active']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table categories {
  id bigint [pk, increment]
  parent_id bigint [ref: > categories.id]
  name varchar(120) [not null]
  slug varchar(140) [not null, unique]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table products {
  id bigint [pk, increment]
  category_id bigint [not null, ref: > categories.id]
  sku varchar(64) [not null, unique]
  name varchar(255) [not null]
  slug varchar(255) [not null, unique]
  description text
  price decimal(12,2) [not null]
  stock int [not null, default: 0]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [not null, unique, ref: > users.id]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [not null, ref: > carts.id]
  product_id bigint [not null, ref: > products.id]
  quantity int [not null]
  unit_price decimal(12,2) [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (cart_id, product_id) [unique]
  }
}

Table coupons {
  id bigint [pk, increment]
  code varchar(50) [not null, unique]
  discount_type discount_type [not null]
  discount_value decimal(12,2) [not null]
  min_order_value decimal(12,2) [not null, default: 0]
  max_uses int
  used_count int [not null, default: 0]
  starts_at datetime
  ends_at datetime
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table orders {
  id bigint [pk, increment]
  order_code varchar(30) [not null, unique]
  user_id bigint [not null, ref: > users.id]
  status order_status [not null, default: 'pending']
  subtotal decimal(12,2) [not null]
  discount_total decimal(12,2) [not null, default: 0]
  shipping_fee decimal(12,2) [not null, default: 0]
  grand_total decimal(12,2) [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null, ref: > orders.id]
  product_id bigint [not null, ref: > products.id]
  quantity int [not null]
  unit_price decimal(12,2) [not null]
  line_total decimal(12,2) [not null]
}

Table payments {
  id bigint [pk, increment]
  order_id bigint [not null, unique, ref: > orders.id]
  provider varchar(50) [not null]
  method varchar(50) [not null]
  transaction_ref varchar(120) [unique]
  amount decimal(12,2) [not null]
  status payment_status [not null, default: 'pending']
  paid_at datetime
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table chat_sessions {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  started_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  ended_at datetime
}

Table chat_messages {
  id bigint [pk, increment]
  session_id bigint [not null, ref: > chat_sessions.id]
  role chat_role [not null]
  content text [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}
